# sanhedrin

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: a2a_client.py  multi_agent_chat.py  ollama_local.py  simple_agent.py
src/sanhedrin/: __init__.py  logging.py
src/sanhedrin/adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  gemini_adapter.py  ollama_adapter.py  registry.py
src/sanhedrin/auth/: middleware.py
src/sanhedrin/cli/: __init__.py  main.py
src/sanhedrin/config/: __init__.py  settings.py
src/sanhedrin/core/: __init__.py  errors.py  state_machine.py  types.py
src/sanhedrin/orchestration/: __init__.py  catalog.py  router.py
src/sanhedrin/server/: __init__.py  agent_card.py  app.py  metrics.py  task_manager.py
src/sanhedrin/server/handlers/: __init__.py  jsonrpc_handler.py
src/sanhedrin/utils/: validation.py
tests/unit/: test_types.py
