[project]
name = "sanhedrin"
version = "0.1.0"
description = "A2A Protocol Multi-Agent Coordination - The Council of AI Agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Sanhedrin Contributors" }
]
keywords = [
    "a2a", "agent2agent", "agents", "ai", "llm", "multi-agent",
    "orchestration", "claude", "gemini", "codex", "ollama"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.25,<1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109,<1.0",
    "uvicorn[standard]>=0.25,<1.0",
    "sse-starlette>=2.0,<3.0",
]
ollama = [
    "ollama>=0.3,<1.0",
]
storage-sqlite = [
    "aiosqlite>=0.19,<1.0",
]
storage-redis = [
    "redis>=5.0,<6.0",
]
cli = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=4.1,<8.0",
    "pytest-watch>=4.2,<5.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.3,<1.0",
    "pre-commit>=3.6,<5.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.6,<3.0",
]
all = [
    "sanhedrin[server,ollama,storage-sqlite,cli,dev]",
]

[project.scripts]
sanhedrin = "sanhedrin.cli.main:app"

[project.urls]
Homepage = "https://github.com/consigcody94/sanhedrin"
Documentation = "https://github.com/consigcody94/sanhedrin#readme"
Repository = "https://github.com/consigcody94/sanhedrin"
Issues = "https://github.com/consigcody94/sanhedrin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanhedrin"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=sanhedrin --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests", "examples"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # ruff-specific
    "S",      # flake8-bandit security
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert used (ok in tests)
    "S104",   # binding to all interfaces
    "S105",   # hardcoded password (false positives)
    "S106",   # hardcoded password (false positives)
]

[tool.ruff.lint.isort]
known-first-party = ["sanhedrin"]

[tool.coverage.run]
source = ["src/sanhedrin"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
